[package]
name = "http-request"
version = "0.1.0"
authors = ["Indra Gunawan <i.gunawan@whim.sg>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.21"
tokio = { version = "0.2.21", features = ["macros"] }
hyper = "0.13.5"
http = "0.2.1"

